<resources>
    <string name="app_name" translatable="false">Silfy</string>
    <string name="text_app_description" translatable="false">Study\nForeign Languages\nFor You</string>
    <string name="text_app_description_v2" translatable="false">Study Foreign Languages\nFor You</string>
    <string name="text_email">Поштова скринька</string>
    <string name="email_subject">Привіт, розробнику Silfy!</string>
    <string name="email_app_version">Версія додатку:</string>
    <string name="error_no_email_client">Не знайденно поштового додатку!</string>
    <string name="tex_word_new">Додати нове слово</string>
    <string name="text_word_edit">Редагування слова</string>
    <string name="text_word_state_unknown">Невідомо</string>
    <string name="text_word_state_poor">Невпевнено</string>
    <string name="text_word_state_average">Середньо</string>
    <string name="text_word_state_good">Добре</string>
    <string name="text_word_state_excellent">Відмінно</string>
    <string name="text_word">Слово</string>
    <string name="text_word_en_version">(на англійській мові)</string>
    <string name="text_translate">Переклад</string>
    <string name="text_word_ua_version">(на українській мові, декілька перекладів додавати через кому)</string>
    <string name="text_category">Категорії</string>
    <string name="text_created_users">Створені користувачі</string>
    <string name="text_category_empty">Категорії відсутні</string>
    <string name="text_category_empty_or_all_added">Категорії відсутні або всі можливі вже добавленно</string>
    <string name="text_category_new_label">Назва</string>
    <string name="text_empty_categories_for_word">Слово неналежить до жодної категорії</string>
    <string name="text_empty_categories_for_training">Якщо не вибрати категорії то будуть використовуватись всі слова</string>
    <string name="text_sign_up_time">Реєстрація</string>
    <string name="text_name">Ім\'я</string>
    <string name="text_avatar">Аватар</string>
    <string name="text_menu">Меню</string>
    <string name="text_contact_us">Зв\'яжіться з нами</string>
    <string name="text_privacy_policy">Політика конфіденційності</string>
    <string name="text_difficult">Складність</string>
    <string name="text_count_errors">Кількість помилок</string>
    <string name="text_limit_errors">Обмежити кількість?</string>
    <string name="text_training_duration">Тривалість (хв)</string>
    <string name="text_training_duration_5">5</string>
    <string name="text_training_duration_10">10</string>
    <string name="text_training_duration_30">30</string>
    <string name="text_difficult_easy">Легко</string>
    <string name="text_difficult_hard">Важко</string>
    <string name="text_training_select_words">Слова</string>
    <string name="text_training_select_all_words">Всі</string>
    <string name="text_training_select_favourite_words">Обрані</string>
    <string name="text_used_black_list">Включити слова із чорного списку?</string>
    <string name="text_count_all_words">Загальна кількість слів</string>
    <string name="text_count_favourites_words">Кількість обраних слів</string>
    <string name="text_count_black_words">Кількість слів у чорному списку</string>
    <string name="text_clean_success">Прогрес успішно оновлено</string>
    <string name="text_settings">Налаштування</string>
    <string name="text_info">Цікаво знати</string>
    <string name="text_admin">Адміністратор</string>
    <string name="text_go_select_mode">Виберіть правильний переклад слова</string>
    <string name="text_go_write_mode">Введіть один із можливих варіантів перекладу слова</string>
    <string name="text_go_symbol">Складіть переклад слова із букв</string>
    <string name="text_go_stats_time">Час закінчився</string>
    <string name="text_go_stats_errors">Кількість помилок перевищила норму</string>
    <string name="text_go_stats_result">Ваш результат</string>
    <string name="text_stats_total_words">Кількість вибраних слів для вивчення:</string>
    <string name="text_stats_used_words">Використано слів:</string>
    <string name="text_stats_success">Успішні відповіді:</string>
    <string name="text_stats_errors">Невдалі відповіді:</string>
    <string name="text_empty"> </string>
    <string name="text_info_level_knowledge_1">Результат навчання відображається для кожного слова рівнем \"Успішності\".</string>
    <string name="text_info_level_knowledge_2">Правильні відповіді позитивно впливають на результат.</string>
    <string name="text_info_level_knowledge_3">Хибні відповіді можуть суттєво його знизити.</string>
    <string name="text_info_excellent_level">високий рівень знань</string>
    <string name="text_info_average_level">середній рівень знаннь</string>
    <string name="text_info_unknown_level">початковий рівень, потрібно більше практики щоб досягти більш високго рівня</string>
    <string name="text_info_mark_1">Слова можна додавати до двох списків: обрані та список ігнору(\"Чорний список\").</string>
    <string name="text_info_mark_2">Вони можуть бути враховані в налаштуваннях при навчанні.</string>
    <string name="text_help_mark_favourite">занесені в список обраних</string>
    <string name="text_help_mark_black">занесені в список ігнору - “чорний список”</string>
    <string name="text_interesting">Цікаво знати</string>
    <string name="text_label_active_profile">Активний</string>
    <string name="text_info_easy_level">I. Легкий рівень навчання:</string>
    <string name="text_info_hard_level">II. Важкий рівень навчання:</string>
    <string name="text_info_two_modes">використовуються два режими навчання:</string>
    <string name="text_info_collect_word">a. зібрати слово з літер</string>
    <string name="text_info_select_word">б. вибрати правильний варіант</string>
    <string name="text_info_write_word">а. набрати слово без підказок</string>
    <string name="text_info_often_found">зістрчаються частіше слова з низьким рівнем \"Успішності\"</string>
    <string name="text_info_new_symbol">присутні зайві літери в режимі складання слова з літер</string>
    <string name="text_info_translate">пропонується переклад:</string>
    <string name="text_info_en_ua">анг -> укр</string>
    <string name="text_info_ua_en">укр -> анг</string>
    <string name="text_info_new_mode">додатковий режим:</string>
    <string name="symbol_l" translatable="false">L</string>
    <string name="symbol_a" translatable="false">A</string>
    <string name="symbol_f" translatable="false">F</string>
    <string name="symbol_w" translatable="false">W</string>
    <string name="symbol_b" translatable="false">B</string>
    <string name="word_word" translatable="false">Word</string>
    <string name="word_big" translatable="false">Big</string>
    <string name="word_apple" translatable="false">Apple</string>
    <string name="word_pattern" translatable="false">answ</string>
    <string name="plurals_word_zero">%d слів</string>
    <string name="plurals_word_one">%d слово</string>
    <string name="plurals_word_two">%d слова</string>
    <string name="plurals_word_few">%d слова</string>
    <string name="plurals_word_many">%d слів</string>
    <string name="hint_email" translatable="false">example@gmail.com</string>
    <string name="hint_search">Пошук</string>
    <string name="hint_category">Категорія</string>
    <string name="hint_firstname">Ім\'я</string>
    <string name="hint_lastname">Прізвище</string>
    <string name="image_app_logo">logo</string>
    <string name="image_fab">fab</string>
    <string name="image_arrow">arrow</string>
    <string name="image_close">close</string>
    <string name="button_continue">Продовжити</string>
    <string name="button_save">Зберегти</string>
    <string name="button_start">Почати!</string>
    <string name="button_change">Змінити</string>
    <string name="button_select">Вибрати</string>
    <string name="button_new_category">Нова категорія</string>
    <string name="button_go" translatable="false">Start!</string>
    <string name="tab_a_z">A-Z</string>
    <string name="button_training">Режим тренувань</string>
    <string name="button_dictionary">Словник</string>
    <string name="button_profile">Профіль</string>
    <string name="button_info">Цікаво знати</string>
    <string name="button_admin">Адміністратор</string>
    <string name="button_clear_learning_progress">Скинути прогрес навчання</string>
    <string name="button_clear_list_words">Очистити</string>
    <string name="button_set_default_words">Набір слів за замовчуванням</string>
    <string name="button_check">Перевірити</string>
    <string name="error_wrong_email">Невірна пошта</string>
    <string name="error_wrong_word_en">Слово повинно містити лише літери англійського алфавіту</string>
    <string name="error_wrong_word_ua">Слово повинно містити лише літери українського алфавіту</string>
    <string name="error_wrong_category_name">Назва повинна містити лише літери, цифри та може включати: _-/\|</string>
    <string name="error_is_category_exist">Категорія з такою назвою вже існує</string>
    <string name="alert_error_auth_check_profile">Виникла помилка при пошуку профіля, спробуйте змінити почтову адресу</string>
    <string name="alert_error_auth_create_profile">Не вдалось створити профіль, спробуйте змінити почтову адресу</string>
    <string name="alert_error_auth_missing_profile">Профіль було створено невірно, спробуйте змінити почтову адресу</string>
    <string name="alert_error_update_profile_data">Підчас оновлення профілю виникла помилка</string>
    <string name="alert_error_update_profile_photo">Підчас оновлення фото профілю виникла помилка</string>
    <string name="alert_error_delete_profile">Видалити профіль не вдалось</string>
    <string name="alert_error_not_load_data">Не вдалось завантажити дані зі словника</string>
    <string name="alert_error_saved_data">Не вдалось зберегти дані до словника</string>
    <string name="alert_error_delete_data">Не вдалось видалити дані зі словника</string>
    <string name="alert_title_select_words_for_training_is_empty">По заданим критеріям немає слів для початку навчання</string>
    <string name="alert_title_profile_delete">Ви впевнені що хочете видалити профіль %s?</string>
    <string name="alert_title_category_delete">Ви впевнені, шо бажаєте видалити категорію %s?</string>
    <string name="alert_title_exit_profile">Вийти з профілю?</string>
    <string name="alert_title_ready_update">Доступна нова версія додатку, оновити зараз?</string>
    <string name="alert_title_word_delete">Ви впевнені, шо бажаєте видалити слово [%s]?</string>
    <string name="alert_title_cancel_training">Завершити тренування?</string>
    <string name="alert_title_clean_all_progress_dictionary">Ви впевнені що хочете скинути прогрес вивченя слів?</string>
    <string name="alert_title_clean_favourite_dictionary">Ви впевнені що хочете очистити список відібраних слів?</string>
    <string name="alert_title_clean_black_dictionary">Ви впевнені що хочете очистити чорний список слів?</string>
    <string name="alert_title_create_new_profile">Створити новий профіль з email: %s?</string>
    <string name="alert_title_auth_selected_profile">Увійти з вибраним профілем: %s?</string>
    <string name="alert_title_switch_profile_to">Змінити профіль на %s?</string>
    <string name="alert_title_set_default_words">Оновити всі слова до слів за замовчуванням?</string>
    <string name="alert_message_set_default_words">Відбудуться зміни:\n\t- видалення доданих слів\n\t- оновлення категорій\n\t- очищення прогресу навчання\n\t- очищення списку обраних слів\n\t- очищення \"чорного списку\"</string>
    <string name="alert_button_exit">Вихід</string>
    <string name="alert_button_no">Ні</string>
    <string name="alert_button_cancel">Відмінити</string>
    <string name="alert_button_yes">Так</string>
    <string name="alert_button_ok">ОК</string>
</resources>