<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="model"
            type="ua.notky.silfy.models.observable.NewCategoryModel" />
    </data>

    <androidx.appcompat.widget.LinearLayoutCompat
        style="@style/Root.Dialog"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/View.Dialog.Label"
            android:text="@string/text_category_new_label" />

        <View
            android:id="@+id/divider"
            style="@style/View.Divider"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:layout_marginTop="1dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_category"
            style="@style/TextInputLayout.NoHint"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginHorizontal="0dp"
            android:layout_marginTop="15dp">

            <ua.notky.base.ui.view.edittext.ClearFocusEditText
                android:id="@+id/edit_category"
                style="@style/TextInputEditText"
                android:text="@={model.name}"
                android:hint="@string/hint_category"/>
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_new"
            style="@style/Button.Main"
            android:text="@string/button_save"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginTop="40dp"/>

    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>