<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.layout.menu.DifficultTrainingLayout">
    
    <data>
        
        <variable
            name="model"
            type="ua.notky.silfy.models.observable.TrainingSettingsModel" />
    </data>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_difficult"
            android:layout_marginHorizontal="@dimen/margin_small_horizontal_text"
            android:textAppearance="@style/TextAppearance.Text.Label"/>

        <View
            style="@style/View.Divider"
            android:layout_marginTop="3dp"/>

        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="6dp"
            android:layout_marginHorizontal="@dimen/margin_small_horizontal_text"
            app:checkedDifficultButton="@{model.difficult}">

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/radio_easy"
                style="@style/RadioButton"
                android:layout_marginEnd="10dp"
                android:text="@string/text_difficult_easy"/>

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/radio_hard"
                style="@style/RadioButton"
                android:layout_marginStart="10dp"
                android:text="@string/text_difficult_hard"/>
        </RadioGroup>
    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>