<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.layout.menu.DurationTrainingLayout">

    <data>

        <variable
            name="model"
            type="ua.notky.silfy.models.observable.TrainingSettingsModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_training_duration"
            android:layout_marginHorizontal="@dimen/margin_small_horizontal_text"
            android:textAppearance="@style/TextAppearance.Text.Label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <View
            android:id="@+id/divider"
            style="@style/View.Divider"
            android:layout_marginTop="3dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/button_5"
            style="@style/Button.MenuItem"
            android:text="@string/text_training_duration_5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider"
            app:layout_constraintEnd_toStartOf="@id/button_10"
            app:setDurationFive="@{model.duration}"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/button_10"
            style="@style/Button.MenuItem"
            android:text="@string/text_training_duration_10"
            app:layout_constraintTop_toBottomOf="@id/divider"
            app:layout_constraintEnd_toStartOf="@id/button_30"
            app:layout_constraintStart_toEndOf="@id/button_5"
            app:setDurationTen="@{model.duration}"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/button_30"
            style="@style/Button.MenuItem"
            android:text="@string/text_training_duration_30"
            app:layout_constraintTop_toBottomOf="@id/divider"
            app:layout_constraintEnd_toStartOf="@id/button_infinity"
            app:layout_constraintStart_toEndOf="@id/button_10"
            app:setDurationThirty="@{model.duration}"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/button_infinity"
            style="@style/Button.MenuItem"
            app:layout_constraintTop_toBottomOf="@id/divider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/button_30"
            app:setDurationInfinity="@{model.duration}"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>